working city nav collapse, fixed search bar for small sizes

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,10 @@
     width: 80%;
 }*/
 
+input#srch-terms.form-control, input#srch-loc.form-control{
+    width: 50%;
+}
+
 .footer {
     padding-top: 25px;
     text-align: center;
@@ -24,12 +28,18 @@ a.navbar.brand{
 }
 
 form.navbar-form{
-    padding-left: 40%;
+    padding-left: 60%;
 }
 
 ol.breadcrumb{
     padding-left: 8%;
+
 }
+
+.nearby{
+    text-align: right;
+}
+
 div#citynav-left {
     padding-left: 10px;
 }
